--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,7 @@
 crash.log
 crash.*.log
 
-# Exclude all .tfvars files, which are likely to contain sensitive data
-*.tfvars
+# Exclude tfvars.json files as they may contain sensitive data
 *.tfvars.json
 
 # Ignore override files as they are usually used for local development
